created a simple parser in src/tmp/

--- a/assign3/Makefile
+++ b/assign3/Makefile
@@ -1,5 +1,10 @@
-lexer:	./src/lexer.l
-	mkdir ./bin && lex -o ./bin/lex.yy.c ./src/lexer.l  && gcc ./bin/lex.yy.c -o ./bin/lexer && rm ./bin/lex.yy.c
+parser: ./bin/lex.yy.c ./bin/y.tab.c
+	gcc ./bin/lex.yy.c ./bin/y.tab.c -o ./bin/parser; rm ./bin/lex.yy.c; rm ./bin/y.tab.h; rm ./bin/y.tab.c
+./bin/lex.yy.c:	./src/lexer.l
+	lex -o ./bin/lex.yy.c ./src/lexer.l
+	
+./bin/y.tab.c: ./src/parser.y
+	yacc -d ./src/parser.y; mv y.tab.c ./bin/; mv y.tab.h ./bin/
 
 clean:	
-	rm -r ./bin 
+	rm -r ./bin/parser 
